New angularjs controller and html for substitution cipher

--- a/src/main/resources/static/views/caesar.html
+++ b/src/main/resources/static/views/caesar.html
@@ -14,7 +14,7 @@
 				<select ng-model="caesarCrtl.alphabet" class="form-control" id="alphabet">
 					<option value="abcdefghijklmnopqrstuvwxyz">Latin (abcdefghijklmnopqrstuvwxyz)</option>
 					<option value="abcdefghijklmnñopqrstuvwxyz">Spanish (abcdefghijklmnñopqrstuvwxyz)</option>
-					<option value="abcdefghijklmnñopqrstuvwxyz">German (aäbßcdefghijklmnñoöpqrstuüvwxyz)</option>
+					<option value="aäbßcdefghijklmnñoöpqrstuüvwxyz">German (aäbßcdefghijklmnñoöpqrstuüvwxyz)</option>
 				</select>
 			</div>
 
